--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               alt=""
               class="fly"
             />
-            <img data-lazy-src="images/3/中亚迁飞区.gif" alt="" class="fly" />
+            <img src="images/3/中亚迁飞区.gif" alt="" class="fly" />
             <img
               data-lazy-src="images/3/东亚-澳大利西亚迁飞区.gif"
               alt=""
@@ -151,7 +151,7 @@
               alt=""
               class="china"
             />
-            <img data-lazy-src="images/3/九条线新.gif" alt="" class="wimage" />
+            <img src="images/3/九条线新.gif" alt="" class="wimage" />
           </div>
         </div>
         <script type="text/javascript">
@@ -210,16 +210,16 @@
           </div>
           <div class="gif">
             <section class="gif1">
-              <img data-lazy-src="images/上海.gif" alt="" />
+              <img src="images/上海.gif" alt="" />
               <p>
                 从2006至2010年，上海水鸟数量正从2006年度的20多万只次，下降到目前的不足15万只次
               </p>
             </section>
             <!-- <section class="gif2">
-              <img data-lazy-src="images/大滨鹬.gif" alt="" />
+              <img src="images/大滨鹬.gif" alt="" />
             </section> -->
             <section class="gif3">
-              <img data-lazy-src="images/洞庭湖候鸟下降趋势.gif" alt="" />
+              <img src="images/洞庭湖候鸟下降趋势.gif" alt="" />
               <p>
                 据东洞庭湖常规监测，上世纪90年代，洞庭湖水鸟达20万只以上，到2003至2004年，调查到水鸟仅13万多只，2005至2006年均少于10万只，越冬水鸟数量明显减少。
               </p>
@@ -227,57 +227,57 @@
           </div>
           <div class="bird">
             <div class="hf">
-              <img data-lazy-src="images/红腹滨鹬.jpg" alt="" />
+              <img src="images/红腹滨鹬.jpg" alt="" />
               <span class="hfsp">红腹滨鹬<br />近危物种</span>
             </div>
             <div class="fn">
-              <img data-lazy-src="images/绿隐蜂鸟.jpg" alt="" />
+              <img src="images/绿隐蜂鸟.jpg" alt="" />
               <span class="fnsp">绿隐蜂鸟<br />濒危物种</span>
               <p class="fnp">
                 在现代社会中，蜂鸟赖以生存的栖息地被人类逐渐破坏，有的蜂鸟也面临灭绝的危险。
               </p>
             </div>
             <div class="zg">
-              <img data-lazy-src="images/知更鸟.jfif" alt="" />
+              <img src="images/知更鸟.jfif" alt="" />
               <span class="zgsp">知更鸟<br />低危物种</span>
               <p class="zgp">
                 知更鸟的的数目在二十世纪初急剧减少，家雀和八哥进驻了知更鸟的巢穴。
               </p>
             </div>
             <div class="szy">
-              <img data-lazy-src="images/嘴鹬（yù）.webp" alt="" />
+              <img src="images/嘴鹬（yù）.webp" alt="" />
               <span class="szysp">勺嘴鹬(yù)<br />极度濒危</span>
               <p class="szyp">
                 勺嘴鹬（yù），全球范围内，也才只有600多只，极为罕见，比大熊猫还要珍贵！
               </p>
             </div>
             <div class="bzh">
-              <img data-lazy-src="images/白枕鹤.png" alt="" />
+              <img src="images/白枕鹤.png" alt="" />
               <span class="bzhsp">白枕鹤<br />易危物种</span>
             </div>
             <div class="hl">
-              <img data-lazy-src="images/黑脸琵鹭.jfif" alt="" />
+              <img src="images/黑脸琵鹭.jfif" alt="" />
               <span class="hlsp">黑脸琵鹭<br />濒危物种</span>
               <p class="hlp">
                 国家一级重点保护野生动物，基于持续的栖息地丧失和退化，总物种数量仍在下降。
               </p>
             </div>
             <div class="bg">
-              <img data-lazy-src="images/白鹳.jpg" alt="" />
+              <img src="images/白鹳.jpg" alt="" />
               <span class="bgsp">白鹳<br />濒危物种</span>
               <p class="bgp">
                 欧洲白鹳主要从北欧往东南，飞向小亚细亚，然后沿着尼罗河迁往南非。
               </p>
             </div>
             <div class="bt">
-              <img data-lazy-src="images/白头海雕.jpg" alt="" />
+              <img src="images/白头海雕.jpg" alt="" />
               <span class="btsp">白头海雕<br />低危物种 </span>
               <p class="btp">
                 1940年起，每年超过2千只白头海雕因此死于非命。在几十年间，白头海雕的种群数量出现了断崖式的下滑。
               </p>
             </div>
             <div class="dbj">
-              <img data-lazy-src="images/大滨鹬.jpg" alt="" />
+              <img src="images/大滨鹬.jpg" alt="" />
               <span class="dbjsp">大滨鹬<br />濒危物种</span>
               <p class="dbjp">
                 大滨鹬曾经种群数量高达38万，在过去22年间它们的种群数量下降了78%，现在被评估为IUCN红色名录濒危物种。
@@ -351,7 +351,7 @@
             </video> -->
           </div>
           <div class="contact">
-            <img data-lazy-src="images/接触点.gif" alt="" />
+            <img src="images/接触点.gif" alt="" />
             <p class="con_p">点击帮助候鸟起飞</p>
           </div>
           <div class="con">
@@ -375,6 +375,7 @@
           </div>
           <div class="video">
             <video
+              preload="none"
               width="1300px"
               height="100%"
               autoplay="autoplay"
@@ -390,7 +391,7 @@
                 <embed src="movie.swf" width="320" height="240" />
               </object>
             </video>
-            <img data-lazy-src="images/觅食.png" alt="" class="jingzhen" />
+            <img src="images/觅食.png" alt="" class="jingzhen" />
             <img
               src="images/gif/觅食_1.gif"
               alt=""
@@ -409,7 +410,7 @@
             </video> -->
           </div>
           <div class="contact">
-            <img data-lazy-src="images/接触点.gif" alt="" />
+            <img src="images/接触点.gif" alt="" />
             <p class="con_p">点击帮助候鸟觅食</p>
           </div>
           <div class="con">
@@ -428,6 +429,7 @@
           </div>
           <div class="video">
             <video
+              preload="none"
               width="1300px"
               height="100%"
               autoplay="autoplay"
@@ -469,7 +471,7 @@
             </video> -->
           </div>
           <div class="contact">
-            <img data-lazy-src="images/接触点.gif" alt="" />
+            <img src="images/接触点.gif" alt="" />
             <p class="con_p">枪已上膛 点击试试</p>
           </div>
           <div class="con">
@@ -571,7 +573,7 @@
             </video> -->
           </div>
           <div class="contact">
-            <img data-lazy-src="images/接触点.gif" alt="" />
+            <img src="images/接触点.gif" alt="" />
             <p class="con_p">点击变换队形</p>
           </div>
           <div class="con">
@@ -615,7 +617,7 @@
             />
           </div>
           <div class="contact">
-            <img data-lazy-src="images/接触点.gif" alt="" />
+            <img src="images/接触点.gif" alt="" />
             <p class="con_p">点击帮助城市关灯</p>
           </div>
           <div class="con">
@@ -687,7 +689,7 @@
             </video> -->
           </div>
           <div class="contact">
-            <img data-lazy-src="images/接触点.gif" alt="" />
+            <img src="images/接触点.gif" alt="" />
             <p class="con_p">点击恢复湿地</p>
           </div>
           <div class="con">
